--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,8 +28,8 @@
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                 <p class="login-input__password-require">введите пароль</p>           
                 <div class="login-input__button">
-                    <a class="Register" href="/signup">регистрация</a> 
-                    <button class="LogIn">вход</button>
+                    <a class="register" href="/signup">регистрация</a> 
+                    <button class="login-button">вход</button>
                 </div>
             </form>    
         </div>
