--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -26,8 +26,8 @@
             <p class="login-input__again-validation">пароль должен содержать не менее 8 символов</p>
             <p class="login-input__again-identical">пароли должны должны быть одинаковыми</p>
             <div class="login-input__button">
-                <a class="LogIn" href="/login">вход</a>
-                <button class="Register">регистрация</button>
+                <a class="login-button" href="/login">вход</a>
+                <button class="register">регистрация</button>
             </div>
             {{ form_end(form) }}
         </div>
