изменили лобби для видео

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -103,5 +103,5 @@
         </div>
     </div>
 </body>
- <script src="/js/socket.js"></script>
+ <script src="/js/lobby-socket.js"></script>
 {% endblock %}
