начало игры в мультиплеере

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <a class="start-game" href="/multiplayer">начать игру</a>
+            <button class="start-game">начать игру</button>
         </div>
         <div class="user-profile">
             <div class="user-profile__header">
