добавил список лобби

--- a/templates/select-mode.html.twig
+++ b/templates/select-mode.html.twig
@@ -42,7 +42,7 @@
 						</p>
 					</div>
 				</a>
-				<a href="/lobby" class="link listing link_with-image">
+				<a href="/join" class="link listing link_with-image">
 					<div class="img-placeholder">
 						<img src="/images/listing.png" alt="listing" class="link__image">
 					</div>
