--- a/templates/select-solo-mode.html.twig
+++ b/templates/select-solo-mode.html.twig
@@ -44,7 +44,7 @@
 						</p>
 					</div>
 				</a>
-				<a href="/game" class="link blitz link_with-image">
+				<a href="/blitz" class="link blitz link_with-image">
 					<div class="img-placeholder">
 						<img src="/images/blitz.png" alt="blitz" class="link__image">
 					</div>
