--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -37,7 +37,7 @@
 						</p>
 					</div>
 				</a>
-				<a href="/select_mode" class="link multiplayer link_with-image">
+				<a href="/select_multiplayer_mode" class="link multiplayer link_with-image">
 					<div class="img-placeholder">
 						<img src="/images/multiplayer.png" alt="multiplayer" class="link__image">
 					</div>
