--- a/templates/select-classic-mode.html.twig
+++ b/templates/select-classic-mode.html.twig
@@ -36,7 +36,7 @@
 							холоп
 						</h1>
 						<p class="link__subtitle">
-							маленький размер поля и медленная игра
+							маленький размер поля
 						</p>
 					</div>
 				</div>
@@ -46,17 +46,17 @@
 							крестьянин
 						</h1>
 						<p class="link__subtitle">
-							классические размер поля и скорость игры
+							классический размер поля
 						</p>
 					</div>
 				</div>
 				<div class="link">
 					<div class="link__text">
 						<h1 class="link__title">
-							БОЯРИН
+							боярин
 						</h1>
 						<p class="link__subtitle">
-							большой размер поля и быстрая игра
+							большой размер поля
 						</p>
 					</div>
 				</div>
