--- a/templates/l40-game-over.twig
+++ b/templates/l40-game-over.twig
@@ -6,9 +6,9 @@
     <div class="bg">
         <div class="results-placeholder">
             <div class="results">
-                <p class="result-title">финальн</p>
+                <p class="result-title">финальное время</p>
                 <p class="score">{{lastScore}}</p>
-                <p class="result-title">личный счет</p>
+                <p class="result-title">минимальное время</p>
                 <p class="score">{{maxScore}}</p>
                 <p class="result-title">молодец! ещё немного! держи мотивирующее видео!</p>
 
@@ -19,7 +19,7 @@
                 </video>
             </div>
                 <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = '/blitz'">сыграть заново</h1>
+                    <h1 class="link__header" onclick="window.location.href = '/l40'">сыграть заново</h1>
                 </div>
                 <div class="link">
                     <h1 class="link__header" onclick="window.location.href = '/menu'">вернуться в меню</h1>
