list_lobby web-socket

--- a/templates/list_lobby.html.twig
+++ b/templates/list_lobby.html.twig
@@ -26,6 +26,7 @@
         <h1 class="list-title">Список лобби<h1>
 		<div class="menu">
 		</div>
-	</div>
+	</div>	
     <script src="/js/list_lobby.js"></script>
+	<script src="/js/list_lobby-socket.js"></script>
 {% endblock %}
