--- a/public/css/multiplayer.css
+++ b/public/css/multiplayer.css
@@ -25,7 +25,8 @@
 {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
