--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -64,5 +64,5 @@
 <script src="/js/game/figures.js"></script>
 <script src="/js/game/images.js"></script>
 <script src="/js/game/game.js"></script>
-<script src="/js/game/init-game.js"></script>
+<script src="/js/multiplayer-settings.js"></script>
 {% endblock %}
