--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -7,7 +7,7 @@
 <main class="main">
         <img class="logo" src="/images/logo.png" alt="logo">
         <div class="wrapper-game">
-            <div class="wrapper-main-field">
+            <div id="{{ user.playerId }}" class="wrapper-main-field">
                 <p class="player_name">никита</p>
                 <div class="main-field">
                     <div class="game__buffer"> 
@@ -39,17 +39,17 @@
             </div>
             <div class="palyers-list">
                 <div class="other-player">
-                    <p class="player__username">иван</p>
+                    <p class="player__username"></p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
                 <div class="other-player">
-                    <p class="player__username">петр</p>
+                    <p class="player__username"></p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
                 <div class="other-player">
-                    <p class="player__username">николай</p>
+                    <p class="player__username"></p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
